--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
 <h1> Hello from GitHub</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hello from GitHub</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+      text-align: center;
+      color: #333;
+    }
+    header {
+      background-color: #24292e;
+      color: white;
+      padding: 2rem 1rem;
+    }
+    main {
+      padding: 2rem;
+    }
+    footer {
+      background-color: #e1e4e8;
+      padding: 1rem;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+      font-size: 0.9rem;
+    }
+    a {
+      color: #0366d6;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Hello from GitHub</h1>
+    <p>Welcome to my single-page website!</p>
+  </header>
+
+  <main>
+    <p>This is a simple responsive HTML website hosted on GitHub Pages.</p>
+    <p>You can edit this page using HTML and CSS.</p>
+    <p>🌐 <a href="https://github.com/">Visit GitHub</a></p>
+  </main>
+
+  <footer>
+    &copy; 2025 Your Name. Made with ❤️ and GitHub Pages.
+  </footer>
+</body>
+</html>
